resolve overlapping css during task page eye toggle

--- a/Frontend/src/components/Navbar/Navbar.css
+++ b/Frontend/src/components/Navbar/Navbar.css
@@ -6,10 +6,7 @@
   z-index: 1000;
   position: fixed;
   top: 0%;
-  width: 100%;
-  height: 20%;
-  height: 20%;
-  
+  width: 100%;  
 }
 
 .title {
